--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "src",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"ts-node src/index.ts"
+    "dev": "ts-node src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.20.0",
     "express": "^4.21.0"
   },
   "devDependencies": {
