--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.20.0",
+    "@types/jest": "^29.5.14",
+    "@types/supertest": "^6.0.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-validator": "^7.2.0",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0"
+    "lodash": "^4.17.21",
+    "morgan": "^1.10.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
